--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <title>FOCUS</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="font-dmsans"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
